# studio-dynasty-builder

./: .env  .env.example  .gitignore  AGENTS.md  README.md  README_PORTRAITS.md  RELEASE_CHECKLIST.md  SECURITY.md  TODO.md  batch_generate.py  bg_generator.py  current_files.txt  debug.py  download_svg_portraits.js  dummy.js  eslint.config.js  export_prompts.js  files.txt  fix_budget_field.py  fix_build_steps.py  fix_cast.py  fix_changed_this.py  fix_colors.py  fix_div.py  fix_escape_final.py  fix_eslint.py  fix_film_button.py  fix_film_logic.py  fix_import.py  fix_itch_workflow.js  fix_max_market.py  fix_media.py  fix_os_path.py  fix_os_path_2.py  fix_portrait.py  fix_portrait_final.py  fix_portrait_forward.py  fix_portrait_forward2.py  fix_portrait_forward3.py  fix_prompts.py  (+70 more)
archived/: ScriptDevelopment.corrupt.tsx
docs/: long-horizon-progression.md  playability-fixes.md  playability-score-technical.md  playability-score.md
e2e/: game-start.spec.ts  helpers.ts  ip-management.spec.ts  landing.spec.ts  release-finance.spec.ts  save-load.spec.ts  script-development.spec.ts  smoke.spec.ts  tv-script.spec.ts
mods/: README.md  player-custom-db.bundle.json  real-world-db.bundle.json  real-world-db.catalog.json
scripts/: build-real-world-db.mjs  (+11 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.release.conf.json  tauri.release.macos.conf.json  tauri.release.windows.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: saves.toml  steam.toml
src-tauri/src/: lib.rs  main.rs
(+580 files in other folders)
