[package]
name = "studio-magnate"
version = "0.1.0"
description = "Studio Magnate"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = ["codegen"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tauri]
version = "2.10.1"

[features]
prod = ["tauri/custom-protocol"]
