[package]
name = "studio-magnate"
version = "0.1.0"
description = "Studio Magnate"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.5.6"

[dependencies]
tauri = "2.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
prod = ["tauri/custom-protocol"]}
